fix: swagger fixes
