# go-backend/docs/swagger.json
@@ -18,6 +18,24 @@
     "host": "localhost:8000",
     "paths": {
         "/products": {
+            "get": {
+                "description": "list inserted products",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List Products",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/product.Product"
+                            }
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "update inserted product",
                 "produces": [
@@ -60,26 +78,6 @@
                 }
             }
         },
-        "/products/list": {
-            "get": {
-                "description": "list inserted products",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List Products",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/product.Product"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/products/{id}": {
             "get": {
                 "description": "get product",
@@ -108,6 +106,15 @@
                     "application/json"
                 ],
                 "summary": "Delete Product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
